@startuml

[*] -> CheckForFallableTiles
WaitForInput -> InputDetected
WaitForInput --> WaitForInput
InputDetected -> CheckForPoints
CheckForPoints --> WaitForInput
CheckForPoints -> RemovingTiles
RemovingTiles --> CheckForFallableTiles
CheckForFallableTiles -> CheckForPoints
CheckForFallableTiles -> TilesFalling
TilesFalling --> CheckForFallableTiles


'also part of the state machine, but not main path.
'used for switching back when no match found after sliding a tile

InputDetected --[#999999,dotted]> WaitForInput
CheckForPoints -[#999999,dotted]> InputDetected

@enduml